--- a/index.html
+++ b/index.html
@@ -11,77 +11,90 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="project">
-        <h3>Cтоматологическая <span>клиника</span></h3>
-        <div class="subtitle">Проект YniClinic прошел все этапы от разработки до продвижения
-            в нашей компании.</div>
-        <h2>YniClinic</h2>
-    </div>
-    <div class="woman"></div>
-    <div class="top">
-        <div class="top_number">
-            <div class="top_10">топ <span>10</span></div>
-            <div class="top_30">топ <span>30</span></div>
-        </div>
-        <div class="top_sourse">
-            <div class="yandex">Яндекс</div>
-            <div class="google">Google</div>
-        </div>
-        <div class="top_descr">
-            Наша команда вывела сайт в топ-10, топ-30 позиций SEO-оптимизации. Увеличила рост трафика и посещаемости сайта, что привело клинике новых клиентов, прибыль  и узнаваемость бренда.
+    
+    <div class="container_1">
+        <div class="project">
+            <h3>Cтоматологическая <span>клиника</span></h3>
+            <div class="subtitle">Проект YniClinic прошел все этапы от разработки до продвижения
+                в нашей компании.</div>
+            <h2>YniClinic</h2>
         </div>
     </div>
-    <div class="about">
-        <h2 class="about_title">О проекте</h2>
-        <div class="about_our_all">
-            <div class="about_our">
-                <h3 class="about_our_title">Наш
-                    клиент</h3>
-                <div class="about_our_descr_1">Крупная 
-                    стоматологическая 
-                    клиника «YniClinic»</div>
-            </div>
-            <div class="about_our">
-                <h3 class="about_our_title">Срок 
-                    сотрудничества</h3>
-                <div class="about_our_descr">октябрь 2019 —октябрь 2020</div>
-            </div>
-            <div class="about_our">
-            </div>
-        </div>
-    </div>
-    <div class="directions">
+    <div class="container_1">
         <div class="woman"></div>
-        <h2 class="directions_title">Основные направления</h2>
-        <div class="directions_descr">YniClinic — 
-            многопрофильная стоматологическая клиника, в которой работают квалифицированные хирурги и врачи-ортопеды.</div>
-            <ul class="directions_menu">
-                <li>
-                    <div class="directions_menu_number">1</div>
-                    <div class="directions_menu_items">Семейная стоматология</div>
-                </li>
-                <li>
-                    <div class="directions_menu_number">2</div>
-                    <div class="directions_menu_items">Имплантация зубов </div>
-                </li>
-                <li>
-                    <div class="directions_menu_number">3</div>
-                    <div class="directions_menu_items">Эстетическая стоматология</div>
-                </li>
-                <li>
-                    <div class="directions_menu_number">4</div>
-                    <div class="directions_menu_items">Выравнивание зубов</div>
-                </li>
-                <li>
-                    <div class="directions_menu_number">5</div>
-                    <div class="directions_menu_items">Протезирование зубов</div>
-                </li>
-            </ul>
     </div>
-    <div class="target">
+    <div class="container_1">
+        <div class="top">
+            <div class="top_number">
+                <div class="top_10">топ <span>10</span></div>
+                <div class="top_30">топ <span>30</span></div>
+            </div>
+            <div class="top_sourse">
+                <div class="yandex">Яндекс</div>
+                <div class="google">Google</div>
+            </div>
+            <div class="top_descr">
+                Наша команда вывела сайт в топ-10, топ-30 позиций SEO-оптимизации. Увеличила рост трафика и посещаемости сайта, что привело клинике новых клиентов, прибыль  и узнаваемость бренда.
+            </div>
+        </div>
+    </div>
+    <div class="container_1">
+        <div class="about">
+            <h2 class="about_title">О проекте</h2>
+            <div class="about_our_all">
+                <div class="about_our">
+                    <h3 class="about_our_title">Наш
+                        клиент</h3>
+                    <div class="about_our_descr_1">Крупная 
+                        стоматологическая 
+                        клиника «YniClinic»</div>
+                </div>
+                <div class="about_our">
+                    <h3 class="about_our_title">Срок 
+                        сотрудничества</h3>
+                    <div class="about_our_descr">октябрь 2019 —октябрь 2020</div>
+                </div>
+                <div class="about_our">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container_1">
+        <div class="directions">
+            <div class="woman"></div>
+            <h2 class="directions_title">Основные направления</h2>
+            <div class="directions_descr">YniClinic — 
+                многопрофильная стоматологическая клиника, в которой работают квалифицированные хирурги и врачи-ортопеды.</div>
+                <ul class="directions_menu">
+                    <li>
+                        <div class="directions_menu_number">1</div>
+                        <div class="directions_menu_items">Семейная стоматология</div>
+                    </li>
+                    <li>
+                        <div class="directions_menu_number">2</div>
+                        <div class="directions_menu_items">Имплантация зубов </div>
+                    </li>
+                    <li>
+                        <div class="directions_menu_number">3</div>
+                        <div class="directions_menu_items">Эстетическая стоматология</div>
+                    </li>
+                    <li>
+                        <div class="directions_menu_number">4</div>
+                        <div class="directions_menu_items">Выравнивание зубов</div>
+                    </li>
+                    <li>
+                        <div class="directions_menu_number">5</div>
+                        <div class="directions_menu_items">Протезирование зубов</div>
+                    </li>
+                </ul>
+        </div>
+    </div>
+    <div class="container_1">
+        <div class="target">
         <div class="target_title">Цель проекта</div>
         <div class="target_descr">Цель проекта — вывести YniClinic
             в топ-10 позиций в поиске и увеличить трафик сайта в Яндексе и Google, для увеличения количества посетителей.</div>
+    </div>
     </div>
     <div class="container">
         <div class="comment">
@@ -115,7 +128,7 @@
                             После того, как сайт был разработан, мы приступили к оптимизации и продвижению.</div>
                     </div>
                 </div>
-                <div class="col-md-3 offset-md-2">
+                <div class="col-md-5 offset-md-0">
                     <img src="img/Teeth.png" alt="Teeth">
                 </div>
             </div>
@@ -184,13 +197,14 @@
                     <div class="result_statistics_gr">
                         <img src="img/statistic_1.jpg" alt="statistic_1">
                         <div class="data_1">с 3% до 15% позиций достигли Топ-10 поиска</div>
+                        <div class="data_2">с 3% до 30% позиций достигли ТOП-30 поиска</div>
                     </div>
                 </div>
                 </div>
                 <div class="row">
                     <div class="col-md-7 offset-md-0">
                         <div class="result_statistics_gr_2">
-                            <img src="img/statistics_2.jpg" alt="statistic_1">
+                            <img src="img/statistic_2.jpg" alt="statistic_2" class="img_statistic_2">
                             <div class="data_1">с 34% до 74% позиций достигли ТOП-30 поиска</div>
                             <div class="data_2">с 24% до 39% позиций достигли Топ-10 поиска</div>
                         </div>
@@ -224,7 +238,9 @@
                         </div>
                     </div>
                     <div class="col-md-7 offset-md-0">
-                        <div class="statistics"><img src="img/statistics_3.png" alt=""></div>
+                        <div class="statistics"><img src="img/statistic_3.jpg" alt="statistic_3"></div>
+                        <div class="data_1">рост трафика с 150 до 300 посетителей/день в течении 3 месяцев регулярного продвижения
+                        </div>
                     </div>
                 </div>
             </div>
