--- a/index.html
+++ b/index.html
@@ -19,11 +19,7 @@
                 в нашей компании.</div>
             <h2>YniClinic</h2>
         </div>
-    </div>
-    <div class="container_1">
         <div class="woman"></div>
-    </div>
-    <div class="container_1">
         <div class="top">
             <div class="top_number">
                 <div class="top_10">топ <span>10</span></div>
@@ -49,7 +45,7 @@
                         стоматологическая 
                         клиника «YniClinic»</div>
                 </div>
-                <div class="about_our">
+                <div class="about_our about_our_1">
                     <h3 class="about_our_title">Срок 
                         сотрудничества</h3>
                     <div class="about_our_descr">октябрь 2019 —октябрь 2020</div>
@@ -91,12 +87,12 @@
     </div>
     <div class="container_1">
         <div class="target">
-        <div class="target_title">Цель проекта</div>
-        <div class="target_descr">Цель проекта — вывести YniClinic
-            в топ-10 позиций в поиске и увеличить трафик сайта в Яндексе и Google, для увеличения количества посетителей.</div>
+            <div class="target_title">Цель проекта</div>
+            <div class="target_descr">Цель проекта — вывести YniClinic
+               в топ-10 позиций в поиске и увеличить трафик сайта в Яндексе и Google, для увеличения количества посетителей.</div>
+        </div>
     </div>
-    </div>
-    <div class="container">
+    <div class="container_1">
         <div class="comment">
             <div class="row">
                 <div class="col-md-5 offset-md-0 ">
@@ -117,7 +113,7 @@
             </div>
         </div>
     </div>
-    <div class="container">
+    <div class="container_1">
         <div class="point">
             <div class="row">
                 <div class="col-md-7 offset-md-0">
@@ -134,7 +130,7 @@
             </div>
         </div>
     </div>
-    <div class="container">
+    <div class="container_1">
         <div class="result">
             <div class="result_title">Что было выполнено</div>
             <div class="result_example">
@@ -175,7 +171,7 @@
             </div>
         </div>
     </div>
-    <div class="container">
+    <div class="container_1">
         <div class="result_conclusion">
             <div class="row">
                 <div class="col-md-5 offset-md-0">
@@ -220,7 +216,7 @@
             </div>
         </div>
     </div>
-    <div class="container">
+    <div class="container_1">
         <div class="increase">
             <div class="title">После того, как мы выполнили намеченный план – создали блог с полезным контентом, нарастили ссылки и подняли клинику в поисковой строке 
             </div>
@@ -246,7 +242,7 @@
             </div>
         </div>
     </div>
-    <div class="container">
+    <div class="container_1">
         <div class="total">
             <div class="row">
                 <div class="col-md-8 offset-md-0">
@@ -255,14 +251,14 @@
                         <div class="descr">Исходя из нашего опыта, мы грамотно подобрали стратегию продвижения для молодого сайта YniClinic только после разработки, учли особенности геоположения клиники и пожелания клиента. </div>
                     </div>
                 </div>
-                <div class="col-md-2 offset-md-1">
+                <div class="col-md-2 offset-md-0">
                     <img src="img/finish.png" alt="man_with_phone">
                 </div>
             </div>
         </div>
-    </div>
+    </div> 
 
-    <div class="container">
+    <div class="container_1">
         <div class="future">
             <img src="img/woman_finish.png" alt="woman">
             <div class="title">Для дальнейшего улучшения показателей, мы порекомендовали клиенту </div>
